mymusic.css
body {
    font-family: 'Oxygen', sans-serif;
}
 
input[type=text] {
    font-family: 'Oxygen', sans-serif;
}

a {
	outline: 0 !important;
}

.bold {
	font-weight: bold;
}

.invisible {
	color: #fff;
}

.rank {
	text-align: right;
}

.color-label {
	border-radius: 50%;
	width: 12px;
	height: 12px;
	display: inline-block;
}

.label-big {
	font-size: 82% !important;
}

.text-grey {
	color: #999;
}

.icon-external img {
	width: 16px;
	height: 13px;
}

#icon-brand {
	color: #f89406;
}

.flag-icon {
	margin-right: 3px;
}

.flag-icon:hover {
	cursor: pointer;
}

.calendarial-month {
	display: inline-block;
	margin: 2px 0px;
}

.statistics-sum {
	display: inline-block;
	margin-right: 3px;
}

.panel-paragraph {
	margin-bottom: 12px;
}

.song-general-info div {
	padding-top: 4px;
	padding-bottom: 4px;
}

.custom-statistics-control .date-picker {
	width: 100px;
}

.custom-statistics-between {
	margin: 0px 16px;
	font-weight: bold;
}

#custom-statistics-result {
	margin-top: 32px;
}

#history-dp {
	display: inline-block;
	padding: 0px 16px 0px 16px;
}

#btn-record-type-control {
	display: none;
}

#btn-record-type-cancel {
	margin-right: 12px;
}

#record-type-order .ui-sortable-handle {
	background-color: #d9edf7;
}

.ui-sortable-handle:hover {
	cursor: move;
}

#add-played-song-submit {
	margin-top: 12px;
}

#add-played-song-submit button {
	margin-left: 12px;
}

.add-played-song-display {
	display: none;
}

#song-mm-link-data .form-group {
    margin-bottom: 0px;
}

#admin-song-static .form-group {
    margin-bottom: 0px;
}

#admin-song-static .form-group:last-child {
	margin-bottom: 15px !important;
}

#mm-link-suggestions {
	margin-top: 12px;
}

.loading-static {
	display: none;
	padding: 9px 32px;
}

.administration-paragraph {
	margin-bottom: 12px;
}

.played-admin-played-time {
	display: inline-block;
	width: 70px;
}

.played-admin-time {
	display: inline-block;
	position: relative;
	top: -16px;
}

.played-admin-song-info {
	display: inline-block;
	width: 350px;
}

.played-admin-played-details {
	display: inline-block;
	width: 200px;
}

.played-admin-device {
	margin-bottom: 6px;
}

.played-admin-activity {
	margin-bottom: 4px;
}

#played-admin-song-input {
	display: none;
}

#update-status-report {
	margin-top: 16px;
}

.update-status-report-length-rating div {
	margin: 8px 0px;
}

#update-status-suggestions-no-more {
	display: none;
}

.home-welcome {
	font-size: 120%;
}

.add-played-song-div {
    padding: 6px 18px 0px 15px;
    margin-top: 8px;
}

/* ------- Calendarial ------- */
#calendarial-accordion.affix {
	position: fixed;
	top: 16px;
}

#calendarial-container {
	padding-top: 24px;
}

.calendarial-content-title {
	padding: 8px 12px;
	margin-bottom: 12px;
	font-size: 1.2em;
}
/* ---------------------------- */

/* ------- Admin search ------- */
.as_choice {
	padding: 2px 4px;
	border-bottom: 1px solid lightskyblue;
	min-height: 40px;
}

.as_choice:last-child {
	border-bottom: none !important;
}
/* ---------------------------- */

/* --- datepicker z-index (otherwise it is not visible in modal window) --- */
.datepicker {
	z-index: 1150 !important;
}

.date-picker {
	width: 96px;
}

#pickdate {
	display: inline !important;
	width: 96px;
}

/* ---- STAR RATING ---- */
.star-rating span {
	color: #f9bf3b;
}

.half-star {
	position: relative;
}

.half-star:after {
	content: '';
    position: absolute;
    z-index: 1;
    background: white;
    width: 50%;
    height: 100%;
    left: 47%;
}
/* --------------------- */

/* ---- SEARCH FIELD ---- */
.search_artist_name {
	font-size: 85%;
}

.search_record_name {
	font-size: 70%;
}
/* --------------------- */

/* ---- SETTINGS ---- */
#settings.affix, #administration.affix {
	position: fixed;
	top: 16px;
}
/* --------------------- */

/* ---- COLORS ---- */
.label-brown {
	background-color: brown;
}

.label-coral {
	background-color: coral;
}

.label-cornflowerblue {
	background-color: cornflowerblue;
}

.label-crimson {
	background-color: crimson;
}

.label-green {
	background-color: green;
}

.label-maroon {
	background-color: maroon;
}

.label-orange {
	background-color: orange;
}

.label-tomato {
	background-color: tomato;
}
/* --------------- */

